// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when closed 1`] = `
<Expander
  headerText="The Label"
  id="some-id"
  interestingContent={false}
  onExpanderChange={[Function]}
  open={false}
>
  <ul
    className="src-modules-nav-components-sidenav-menu__menu"
    role="group"
  >
    <li
      className="src-modules-nav-components-sidenav-menu__link"
      key="Label A"
      role="treeitem"
    >
      <SidenavMenuLink
        label="Label A"
        onClick={[Function]}
        path="/path/a"
      />
    </li>
  </ul>
</Expander>
`;

exports[`should render correctly when open 1`] = `
<Expander
  headerText="The Label"
  id="some-id"
  interestingContent={false}
  onExpanderChange={[Function]}
  open={true}
>
  <ul
    className="src-modules-nav-components-sidenav-menu__menu"
    role="group"
  >
    <li
      className="src-modules-nav-components-sidenav-menu__link"
      key="Label A"
      role="treeitem"
    >
      <SidenavMenuLink
        label="Label A"
        onClick={[Function]}
        path="/path/a"
      />
    </li>
  </ul>
</Expander>
`;
